--- a/index.html
+++ b/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Hello React!</title>
-    </head>
-    <body>
-        <div id="example"></div>
 
-        <!-- Dependencies -->
-        <script src="./node_modules/react/dist/react.js"></script>
-        <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+<head>
+    <meta charset="UTF-8" />
+    <title>Hello React!</title>
+</head>
 
-        <!-- Main -->
-        <script src="./dist/bundle.js"></script>
-    </body>
+<body>
+    <div id="example">
+    </div>
+    <div id="googleMap" style="width:100%;height:400px;"></div>
+
+    <!-- Dependencies -->
+    <script src="./node_modules/react/dist/react.js"></script>
+    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+
+    <!-- Main -->
+    <script src="./dist/bundle.js"></script>
+    <script>
+        function myMap() {
+            var myCenter = new google.maps.LatLng(50.4544477, 30.6165073);
+            var mapProp = {
+                center: myCenter,
+                zoom: 11,
+                panControl: true,
+                zoomControl: true,
+                mapTypeControl: true,
+                scaleControl: true,
+                streetViewControl: true,
+                overviewMapControl: true,
+                rotateControl: true
+            };
+            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+            var marker = new google.maps.Marker({ position: myCenter }); marker.setMap(map);
+            var infowindow = new google.maps.InfoWindow({
+                content:
+                "Hello World!"
+            });
+            infowindow.open(map, marker);
+
+            google.maps.event.addListener(map, 'click', function (event) {
+                placeMarker(map, event.latLng);
+            });
+        }
+
+        function placeMarker(map, location) {
+            var marker = new google.maps.Marker({
+                position: location,
+                map: map
+            });
+            var infowindow = new google.maps.InfoWindow({
+                content: 'Latitude: ' + location.lat() + '<br>Longitude: ' + location.lng()
+            });
+            infowindow.open(map, marker);
+        }
+    </script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_aHRsVOr_CMITd6m0Vuo1X2qSXMicdY&callback=myMap"></script>
+</body>
+
 </html>
